# os-3

./: CMakeLists.txt  main.cpp
src/: fork.cpp  fork.h  philosopher.cpp  philosopher.h
